# Arkadia

./: .gitignore  Cargo.toml  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
crates/terminal-renderer/: Cargo.toml
crates/terminal-renderer/src/: atlas.rs  customglyph.rs  lib.rs  payload.rs  pipeline.rs
crates/terminal-renderer/src/shaders/: cell.wgsl
docs/superpowers/plans/: 2026-04-30-claude-detection-sessions.md  2026-06-11-notepad-active-tab-scroll-selection.md  2026-07-06-worktree-arkadia-integration.md
docs/superpowers/specs/: 2026-06-11-notepad-active-tab-scroll-selection-design.md  2026-06-12-message-navigation-design.md  2026-06-16-modern-view-design.md
src/: App.tsx  PopupApp.tsx  icons.ts  main.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: capture_attrs.rs  capture_claude.rs  capture_question.rs  capture_tint.rs  classify_capture.rs  classify_frames.rs  fg_trace.rs  navigate_live.rs  popup_probe.rs  probe.manifest  wheel_probe.rs
src-tauri/icons/: icon.icns
src-tauri/src/: agent_registry.rs  conversation.rs  external_action.rs  fonts.rs  lib.rs  main.rs  popup.rs  screenshots.rs  session.rs  terminal.rs  terminal_state.rs
src-tauri/src/claude_watcher/: parse.rs  state.rs  watcher.rs
src/components/: AddProjectDialog.tsx  ColorPickerDialog.tsx  ConversationView.tsx  IconPicker.tsx  MessageNavRail.tsx  ModernConversationView.tsx  NotepadPanel.tsx  NotifApp.tsx  PaneContextMenu.tsx  PaneTreeView.tsx  PopupReading.tsx  PopupTerminal.tsx  ProjectContextMenu.tsx  PromptBar.tsx  ReadingPanel.tsx  RenameDialog.tsx  SettingsDialog.tsx  Sidepanel.tsx  TabBar.tsx  Terminal.tsx  TerminalWebGPU.tsx  Toaster.tsx  Toolbar.tsx  ToolbarSettings.tsx  WorkspaceDialog.tsx
src/components/modern/: BlockRow.tsx  ImageThumb.tsx  Lightbox.tsx  MarkdownContent.tsx  MermaidBlock.tsx  MessageBubble.tsx  ToolCard.tsx  css.ts  highlight.ts  toolIcons.ts
src/lib/: activeOrder.test.ts  activeOrder.ts  agentState.test.ts  agentState.ts  backgrounds.test.ts  backgrounds.ts  cellSize.ts  durableStore.test.ts  durableStore.ts  externalAction.test.ts  externalAction.ts  frameStore.test.ts  frameStore.ts  imagePaths.test.ts  imagePaths.ts  keymap.test.ts  keymap.ts  messageTint.ts  notepadStore.test.ts  notepadStore.ts  notifLabel.test.ts  notifLabel.ts  palettes.ts  paneTree.ts  popupState.test.ts  popupState.ts  promptBarReveal.test.ts  promptBarReveal.ts  sessionSnapshot.test.ts  sessionSnapshot.ts  storeHealth.test.ts  storeHealth.ts  tauriEvents.test.ts  tauriEvents.ts  terminalChrome.ts  toast.test.ts  toast.ts  toolbarTree.ts  urlDetect.ts  useElementVisible.ts  (+1 more)
src/styles/: app.css
