[package]
name = "arkadia"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "arkadia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
termwiz = "0.23"
unicode-width = "0.2"
font-kit = "0.14"
notify = "6"
tokio = { version = "1", features = ["fs", "sync", "rt", "rt-multi-thread", "macros", "time"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
open = "5"
sha2 = "0.10"
base64 = "0.22"

# Win32 z-order inspection so the notification popup can tell when Arkadia is
# only behind an always-on-top overlay (Picture-in-Picture) vs a real window.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Dwm",
    # Completion chime played from Arkadia (with the popup's grace period).
    "Win32_Media_Audio",
    # Examples only (fg_trace probe): human-input detection while tracing focus.
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
] }

[dev-dependencies]
tempfile = "3"
