[package]
name = "terminal-renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
swash = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = { version = "29", default-features = false, features = ["webgpu", "wgsl"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
]

